--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,9 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/Optimization/100-cities-alt.txt
+/Optimization/250-cities-alt.txt
+/Optimization/5-cities.txt
+/Optimization/50-cities-alt.txt
+/Optimization/500-cities-alt.txt
+/Optimization/Kjørte i 30 minutter
